--- a/C969/C969.csproj
+++ b/C969/C969.csproj
@@ -142,6 +142,7 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\CustomerDetails.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserSession.cs" />
     <Compile Include="Program.cs" />
