--- a/C969/C969.csproj
+++ b/C969/C969.csproj
@@ -117,6 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CustomerDataHandler.cs" />
+    <Compile Include="Controllers\LoginLogger.cs" />
     <Compile Include="Controllers\ReportsDataHandler.cs" />
     <Compile Include="Forms\AddAppointmentForm.cs">
       <SubType>Form</SubType>
