Added ETC suport for EditAppointment

--- a/C969/C969.csproj
+++ b/C969/C969.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Controllers\CustomerDataHandler.cs" />
     <Compile Include="Controllers\LoginLogger.cs" />
     <Compile Include="Controllers\ReportsDataHandler.cs" />
+    <Compile Include="Controllers\TimeZoneHandler.cs" />
     <Compile Include="Forms\AddAppointmentForm.cs">
       <SubType>Form</SubType>
     </Compile>
