--- a/C969/C969.csproj
+++ b/C969/C969.csproj
@@ -117,7 +117,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\CustomerDataHandler.cs" />
+    <Compile Include="Controllers\CustomerAppointmentsDataHandler.cs" />
     <Compile Include="Controllers\LoginLogger.cs" />
     <Compile Include="Controllers\ReportsDataHandler.cs" />
     <Compile Include="Controllers\TimeZoneHandler.cs" />
