--- a/C969/C969.csproj
+++ b/C969/C969.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\CustomerDetails.cs" />
+    <Compile Include="Models\DatabaseConnectionException.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserSession.cs" />
     <Compile Include="Program.cs" />
