changed app config

--- a/C969/App.config
+++ b/C969/App.config
@@ -40,7 +40,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="DbConnectionString" connectionString="server=127.0.0.1;port=3306;database=client_schedule;user id=root;password=Passw0rd!;" providerName="MySql.Data.MySqlClient" />
+    <add name="DbConnectionString" connectionString="server=127.0.0.1;port=3306;database=client_schedule;user id=sqlUser;password=Passw0rd!;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 
 </configuration>
