--- a/C969/C969.csproj
+++ b/C969/C969.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Models\CustomerDetails.cs" />
     <Compile Include="Models\DatabaseConnectionException.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserSchedule.cs" />
     <Compile Include="Models\UserSession.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
